# PollenClub

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: dev.yaml  master.yaml
src/: app.py  requirements.txt  utils.py  vk_parser.py
src/extractor/: main.py  toponim.py  toponim_parser_yargo.py  yargo_rules.py
src/extractor/dict/: cities_classifier.csv  dict_city1.txt  dict_city2.txt  dict_krai.txt  dict_msk_r.txt  dict_obl.txt  dict_okrug.txt  dict_raion.txt  dict_resp.txt  krai.csv  okrug.csv  regions.csv  resp.csv
