[project]
name = "pollenclub"
version = "0.1.0"
description = "Parse and process comments of PollenClub community"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "configargparse==1.5.3",
    "dawg-python==0.7.2",
    "docopt==0.6.2",
    "pandas>=3.0.1",
    "pymorphy2==0.9.1",
    "pymorphy2-dicts-ru==2.4.417127.4579844",
    "python-dateutil==2.8.2",
    "pytz==2022.2.1",
    "requests==2.26.0",
    "six==1.16.0",
    "tqdm==4.62.3",
    "vkbottle==4.5.2",
    "yargy==0.15.0",
]
